stop bg-img stretch (2)

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -103,8 +103,8 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5; }
   body#bg-img {
-    background-image: url(../img/17.jpg);
-    background: rgba(68, 68, 68, 0.9), url(../img/17.jpg);
+    background-image: url(../img/19.jpg);
+    background: rgba(68, 68, 68, 0.9), url(../img/19.jpg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center center;
